<resources>
    <string name="app_name">Gamingfo</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="search">Search</string>
    <string name="games_for_you">Games For you</string>
    <string name="all_publishers">All Publishers</string>
    <string name="template_1">I Want a Better Catastrophe</string>
    <string name="template_2">With global warming projected to rocket past the…</string>
    <string name="title_favorite">Favorites</string>
    <string name="detail_game">Detail Game</string>
    <string name="games_count">Games Count:</string>
</resources>