<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:id="@+id/textView3"
            android:layout_width="73dp"
            android:layout_height="19dp"
            android:layout_marginTop="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHeadlines"
            android:layout_width="410dp"
            android:layout_height="245dp"
            android:layout_marginTop="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">
        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="197dp"
            android:layout_height="20dp"
            android:layout_marginTop="48dp"
            android:lineHeight="20dp"
            android:text="@string/games_for_you"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.074"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPublishers"
            android:layout_width="410dp"
            android:layout_height="258dp"
            android:layout_marginTop="83dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvHeadlines" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="197dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            android:lineHeight="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/all_publishers"
            app:layout_constraintBottom_toTopOf="@+id/rvPublishers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvHeadlines"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
