<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailGameActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            android:layout_width="72dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:backgroundTint="@android:color/transparent"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="81dp"
            android:layout_height="30dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/detail_game"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDetailGameName"
            android:layout_width="330dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/template_1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailGame" />

        <ImageView
            android:id="@+id/ivDetailGame"
            android:layout_width="411dp"
            android:layout_height="323dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:srcCompat="@tools:sample/avatars" />

        <RatingBar
            android:id="@+id/tvDetailRatingGame"
            android:layout_width="234dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailReleaseDate" />

        <TextView
            android:id="@+id/tvDetailReleaseDate"
            android:layout_width="330dp"
            android:layout_height="36dp"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/dmsans"
            android:text="@string/all_publishers"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailGameName" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/all_publishers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_bookmark_24" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>